# troller

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  PRODUCT.md  README.md  pyproject.toml
.claude/: settings.local.json
src/troller/domain/models/: __init__.py  plan.py
src/troller/worker/adapters/: claude_client.py  github_client.py
tests/unit/domain/: test_plan.py
tests/unit/worker/: test_claude_client.py  test_github_client.py
