[project]
name = "troller"
version = "0.1.0"
description = "Autonomous GitHub issue resolution system using Temporal workflows and multi-agent AI orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.8.0",
    "anthropic>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "temporalio.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
